fix width 80% on mobile

--- a/Admedia.css
+++ b/Admedia.css
@@ -6,10 +6,9 @@ html,body
       margin: 0px;
       padding: 0px;
       overflow-x: hidden;
+      text-align: center;
   }
-body {
-  text-align: center;
-}
+
 li {
     display: none;
 }
@@ -19,9 +18,12 @@ li {
 .barToggle{
   display: block;
 }
+#topBar{
+  width: 100%;
+}
   #topBar .icon {
   position: absolute;
-  right: 50px;
+  right: 30px;
   top: 15px;
   float: right;
   display: block;
@@ -78,7 +80,7 @@ li {
   top: -10px;
 }
 #myPicSection {
-  width: 100%;
+  width: 80%;
   margin-bottom: 300px;
 }
 h1{
@@ -138,6 +140,11 @@ h2{
   padding-bottom: 1150px;
   width: 100%;
 }
+.edu {
+  width: 80%;
+  margin: 0 auto 0 auto;
+  text-align: center;
+}
 .textHeadEdu{
   padding: top:0%;
   margin-top: 0px;
@@ -182,6 +189,17 @@ h3 {
   margin: 10px auto 0 auto;
 
 }
+#workEx {
+  width: 100%;
+}
+.workWitdh{
+  width: 80%;
+  margin: 0 auto 0 auto;
+  text-align:  center;
+}
+#skill{
+  width: 80%;
+}
 .contactGroup {
   display:block;
   padding-bottom: 5%;
@@ -201,5 +219,8 @@ h3 {
   padding: 5% 0%;
 }
 .pp{
+  font-size: 0.8rem;
+}
+.fa-star {
   font-size: 0.8rem;
 }
